# cookiecutter-hypermodern-python

./: README.md  cookiecutter.json
.github/workflows/: tests.yml
docs/: guide.md  quickstart.md
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.md
{{cookiecutter.project_name}}/src/beetsplug/{{cookiecutter.beets_plugin_name}}/: __init__.py  plugin.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/: __init__.py  test_plugin.py
